Makefile: added matrix_plain

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,14 +3,22 @@ CC= gcc
 # -Werror # -pg # -ggdb
 CFLAGS= -Wall -std=c99 -lpthread -ggdb
 OUT= matrixprod
+PLAIN= matrixprod_plain
 FILE= main.c
-FILES= matrix.o DLinkedList.o consumer.o producer.o matrix_reader.o compute_no_thread.o
+FILES= DLinkedList.o consumer.o producer.o matrix_reader.o compute_no_thread.o
+MATRIX= matrix.o
+MATRIX_PLAIN= matrix_plain.o
 
 all: $(OUT)
 	## You can launch the tests with: $ make run ##
 
-$(OUT): $(FILE) $(FILES)
-	$(CC) $< $(FILES) -o $(OUT) $(CFLAGS)
+plain: $(PLAIN)
+
+$(OUT): $(FILE) $(MATRIX) $(FILES)
+	$(CC) $< $(MATRIX) $(FILES) -o $(OUT) $(CFLAGS)
+
+$(PLAIN): $(FILE) $(MATRIX_PLAIN) $(FILES)
+	$(CC) $< $(MATRIX_PLAIN) $(FILES) -o $(PLAIN) $(CFLAGS)
 
 DLinkedList.o: DLinkedList.c
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -22,6 +30,9 @@ producer.o: producer.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 matrix.o: matrix.c
+	$(CC) $(CFLAGS) -c $< -o $@
+
+matrix_plain.o: matrix_plain.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 matrix_reader.o: matrix_reader.c
